--- a/src/app/components/policy/policy.component.html
+++ b/src/app/components/policy/policy.component.html
@@ -13,7 +13,7 @@
       </ul>
 
       <h3>Podstawa prawna przetwarzania danych</h3>
-      <p>Przetwarzamy Twoje dane na podstawie Twojej zgody, którą możesz w każdej chwili wycofać (art. 6 ust. 1 lit. a RODO). Aby wycofać zgodę, prosimy o kontakt na adres e-mail: {{emailContact}}.</p>
+      <p>Przetwarzamy Twoje dane na podstawie Twojej dobrowolnej zgody, która jest wymagana, abyśmy mogli się z Tobą skontaktować i przedstawić ofertę fotowoltaiki (art. 6 ust. 1 lit. a RODO). Zgoda jest dobrowolna, ale bez jej udzielenia nie będziemy mogli odpowiedzieć na Twoje zapytanie. Możesz wycofać zgodę w każdej chwili, pisząc na adres e-mail: {{emailContact}}.</p>
 
       <h3>Odbiorcy danych</h3>
       <p>Twoje dane nie będą przekazywane żadnym innym podmiotom bez Twojej wyraźnej zgody.</p>
@@ -30,9 +30,9 @@
         <li>Ograniczenia przetwarzania,</li>
         <li>Przenoszenia danych,</li>
         <li>Cofnięcia zgody w dowolnym momencie bez wpływu na zgodność z prawem przetwarzania.</li>
-        <li>Wniesienia skargi do organu nadzorczego, którym jest Prezes Urzędu Ochrony Danych Osobowych. Więcej informacji można znaleźć na stronie: <a href="https://uodo.gov.pl/">Prezes UODO</a>.</li>
+        <li>Wniesienia skargi do organu nadzorczego, którym jest Prezes Urzędu Ochrony Danych Osobowych. Więcej informacji można znaleźć na stronie:
       </ul>
-
+      <p>Masz również prawo do wniesienia skargi do organu nadzorczego, którym jest Prezes Urzędu Ochrony Danych Osobowych. Więcej informacji można znaleźć na stronie: <a href="https://uodo.gov.pl/">Prezes UODO</a>.</p>
       <h3>Kontakt</h3>
       <p>W sprawach związanych z ochroną danych osobowych możesz skontaktować się z nami pod adresem e-mail: {{emailContact}}.</p>
     </div>
