--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -148,104 +148,224 @@
 <!--    </div>-->
 <!--  </div>-->
 <!--</div>-->
+<!-- --- another version ---- -->
+<!--<div class="main-layout">-->
+<!--  <div class="video-container">-->
+<!--    <video autoplay muted loop id="backgroundVideo">-->
+<!--      <source src="/background_result_video_small.mp4" type="video/mp4"/>-->
+<!--      Your browser does not support the video tag.-->
+<!--    </video>-->
+<!--    <div class="video-overlay"></div>-->
+<!--    <div class="result-header-content">-->
+<!--      <h1>49,50 kWp</h1>-->
+<!--      <p>Proponowana moc instalacji</p>-->
+<!--      <mat-icon>keyboard_arrow_down</mat-icon>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="card-grid-double">-->
+<!--    <div class="inner-card-grid-single">-->
+<!--      <div class="inner-card-grid-double">-->
+<!--      <div class="section" style="background-image: url('/panel_480x590_L.png')"></div>-->
+<!--      <div class="section">-->
+<!--        <div class="card-spec">-->
+<!--          <h2>Specyfikacja</h2>-->
+<!--          <p>Szacowana wartość wyprodukowanej energii w 1. roku: <strong>40 000 zł</strong></p>-->
+<!--          <p>(przy średniej cenie 0,90 zł / 1 kWh)</p>-->
+<!--          <p>Moduły fotowoltaiczne: <strong>Encore 505W</strong></p>-->
+<!--          <p>Ilość: <strong>95 szt.</strong></p>-->
+<!--          <p>Falownik: <strong>Solplanet</strong></p>-->
+<!--          <p>Montaż: <strong>System montażowy dla dachów skośnych</strong></p>-->
+<!--        </div>-->
+<!--        <div class="card-spec">-->
+<!--          <h2>Gwarancja</h2>-->
+<!--          <p>Panele fotowoltaiczne wydajność: <strong>30 lat</strong></p>-->
+<!--          <p>Panele fotowoltaiczne produkt: <strong>15 lat</strong></p>-->
+<!--          <p>Falownik: <strong>10, 15 lub 20 lat</strong></p>-->
+<!--          <p>Konstrukcja montażowa: <strong>10 lub 15 lat</strong></p>-->
+<!--          <p>Montaż: <strong>3-5 lat</strong></p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="inner-card-grid-single">-->
+<!--      <div class="section">-->
+<!--        <h1>Dostosuj swoją instalację</h1>-->
+<!--        <div class="section-content">-->
+<!--          <div class="settings-checkbox-container">-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary" checked>-->
+<!--                <p>Komplet podzespołów, audyt, montaż, uzgodnienia ppoż, zgłoszenie instalacji, polska gwarancja, wsparcie-->
+<!--                  posprzedażowe</p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary">-->
+<!--                <p>Rozłącznik DC Projoy</p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary">-->
+<!--                <p>Przycisk ppoż z wyzwalaczem</p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary">-->
+<!--                <p>Optymalizatory mocy:</p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--            <li class="radio-button-li">-->
+<!--              <mat-radio-group disabled>-->
+<!--                <mat-radio-button color="primary" value="everyOtherPanel">Co drugi panel</mat-radio-button>-->
+<!--                <mat-radio-button color="primary" value="everyPanel">Każdy panel</mat-radio-button>-->
+<!--              </mat-radio-group>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary">-->
+<!--                <p>Magazyn energii, Falownik hybrydowy</p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--            <li class="radio-button-li">-->
+<!--              <mat-radio-group disabled>-->
+<!--                <mat-radio-button color="primary" value="7Solplanet">7 kWh Solplanet</mat-radio-button>-->
+<!--                <mat-radio-button color="primary" value="10ENCOR">10 kWh ENCOR</mat-radio-button>-->
+<!--                <mat-radio-button color="primary" value="15ENCOR">15 kWh ENCOR</mat-radio-button>-->
+<!--                <mat-radio-button color="primary" value="20ENCOR">20 kWh ENCOR</mat-radio-button>-->
+<!--              </mat-radio-group>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <mat-checkbox color="primary">-->
+<!--                <p>Chcę skorzystać z dotacji Mój Prąd. Więcej informacji:-->
+<!--                  <a href="https://mojprad.gov.pl/" target="_blank" rel="noopener noreferrer">-->
+<!--                    mojprad.gov.pl-->
+<!--                  </a>-->
+<!--                </p>-->
+<!--              </mat-checkbox>-->
+<!--            </li>-->
+<!--          </div>-->
+<!--          <h1>124 000 zł</h1>-->
+<!--          <h2>Proponowana cena brutto</h2>-->
+<!--          <button class="select-button" matRipple>-->
+<!--            <mat-icon>keyboard_arrow_down</mat-icon>-->
+<!--            CHCĘ SKORZYSTAĆ Z OFERTY-->
+<!--            <mat-icon>keyboard_arrow_down</mat-icon>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="card-grid-single">-->
+<!--    <div class="section">-->
+<!--      <h1>ZOSTAW KONTAKT</h1>-->
+<!--      <div class="section-content">-->
+<!--        <h2>oddzwonimy w ciągu 24h</h2>-->
+<!--        <div class="contact-fields-container">-->
+<!--          <mat-form-field appearance="outline">-->
+<!--            <mat-label>Imię i Nazwisko</mat-label>-->
+<!--            <input matInput style="text-align: left">-->
+<!--          </mat-form-field>-->
+<!--          <mat-form-field appearance="outline">-->
+<!--            <mat-label>e-mail</mat-label>-->
+<!--            <input matInput style="text-align: left">-->
+<!--          </mat-form-field>-->
+<!--          <mat-form-field appearance="outline">-->
+<!--            <mat-label>numer telefonu</mat-label>-->
+<!--            <input matInput style="text-align: left;" [value]="'&plus;48'">-->
+<!--          </mat-form-field>-->
+<!--        </div>-->
+<!--        <button class="select-button" matRipple>-->
+<!--          <mat-icon>mail</mat-icon>-->
+<!--          WYŚLIJ-->
+<!--        </button>-->
+<!--        <mat-checkbox class="terms-checkbox" color="primary">-->
+<!--          Wyrażam zgodę na przetwarzanie moich danych osobowych przez {{ companyName }} w celu kontaktu i&nbsp;przedstawienia-->
+<!--          oferty fotowoltaiki zgodnie z-->
+<!--          <a href="/polityka-prywatnosci" target="_blank" rel="noopener noreferrer">-->
+<!--            polityką prywatności-->
+<!--          </a>.-->
+<!--        </mat-checkbox>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 
-<div class="main-layout">
-  <div class="video-container">
+<!--</div>-->
+
+
+<div class="layout-container">
+  <!-- Video Section -->
+  <section class="video-section">
     <video autoplay muted loop id="backgroundVideo">
       <source src="/background_result_video_small.mp4" type="video/mp4"/>
-      Your browser does not support the video tag.
     </video>
     <div class="video-overlay"></div>
-    <div class="result-header-content">
+    <div class="header-content">
       <h1>49,50 kWp</h1>
       <p>Proponowana moc instalacji</p>
+    </div>
+    <button mat-icon-button class="scroll-down-button" aria-label="Scroll down">
       <mat-icon>keyboard_arrow_down</mat-icon>
-    </div>
-  </div>
-  <div class="card-grid-double">
-    <div class="section" style="background-image: url('/panel_480x590_L.png')"></div>
-    <div class="section">
-      <h1>Encore 505W</h1>
-      <h2>Moduły 95 szt.</h2>
-    </div>
-    <div class="section" style="background-image: url('/inverter_front.png')"></div>
-    <div class="section">
-      <h1>40 000 zł</h1>
-      <h2>Szacowana wartość wyprodukowanej energii w pierwszym roku</h2>
-      <p>(przy średniej cenie 0.90 zł / 1 kWh)</p>
-    </div>
-  </div>
-  <div class="card-grid-single">
-    <div class="section">
-      <h1>Dostosuj swoją instalację</h1>
-      <div class="section-content">
-        <div class="settings-checkbox-container">
-          <li>
-            <mat-checkbox color="primary" checked>
-              <p>Komplet podzespołów, audyt, montaż, uzgodnienia ppoż, zgłoszenie instalacji, polska gwarancja, wsparcie
-                posprzedażowe</p>
-            </mat-checkbox>
-          </li>
-          <li>
-            <mat-checkbox color="primary">
-              <p>Rozłącznik DC Projoy</p>
-            </mat-checkbox>
-          </li>
-          <li>
-            <mat-checkbox color="primary">
-              <p>Przycisk ppoż z wyzwalaczem</p>
-            </mat-checkbox>
-          </li>
-          <li>
-            <mat-checkbox color="primary">
-              <p>Optymalizatory mocy:</p>
-            </mat-checkbox>
-          </li>
-          <li class="radio-button-li">
-            <mat-radio-group disabled>
-              <mat-radio-button color="primary" value="everyOtherPanel">Co drugi panel</mat-radio-button>
-              <mat-radio-button color="primary" value="everyPanel">Każdy panel</mat-radio-button>
-            </mat-radio-group>
-          </li>
-          <li>
-            <mat-checkbox color="primary">
-              <p>Magazyn energii, Falownik hybrydowy</p>
-            </mat-checkbox>
-          </li>
-          <li class="radio-button-li">
-            <mat-radio-group disabled>
-              <mat-radio-button color="primary" value="7Solplanet">7 kWh Solplanet</mat-radio-button>
-              <mat-radio-button color="primary" value="10ENCOR">10 kWh ENCOR</mat-radio-button>
-              <mat-radio-button color="primary" value="15ENCOR">15 kWh ENCOR</mat-radio-button>
-              <mat-radio-button color="primary" value="20ENCOR">20 kWh ENCOR</mat-radio-button>
-            </mat-radio-group>
-          </li>
-          <li>
-            <mat-checkbox color="primary">
-              <p>Chcę skorzystać z dotacji Mój Prąd. Więcej informacji:
-                <a href="https://mojprad.gov.pl/" target="_blank" rel="noopener noreferrer">
-                  mojprad.gov.pl
-                </a>
-              </p>
-            </mat-checkbox>
-          </li>
+    </button>
+  </section>
+  <!-- Result Content Section -->
+  <section class="result-content-section">
+    <div class="card-grid-double">
+      <div class="spec-card">
+        <div class="spec-outline">
+          <div class="spec-header">
+            Specyfikacja
+          </div>
+          <div class="spec-content">
+            <div *ngFor="let group of specData" class="spec-row-group">
+              <div *ngFor="let item of group.group" class="spec-row">
+                <div *ngIf="item.value" class="spec-cell-title">
+                  {{ item.title }}
+                </div>
+                <div *ngIf="item.value" class="spec-cell-value">
+                  <span [ngClass]="{'important-value': item.important}">{{ item.value }}</span>
+                  <span *ngIf="item.important" class="important-icon">!</span>
+                </div>
+                <div *ngIf="!item.value" class="spec-cell-description">
+                  {{ item.title }}
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <h1>124 000 zł</h1>
-        <h2>Proponowana cena brutto</h2>
-        <button class="select-button" matRipple>
-          <mat-icon>keyboard_arrow_down</mat-icon>
-          CHCĘ SKORZYSTAĆ Z OFERTY
-          <mat-icon>keyboard_arrow_down</mat-icon>
-        </button>
+        <div class="spec-outline warranty-outline">
+          <div class="spec-header">
+            Gwarancja
+          </div>
+          <div class="spec-content">
+            <div *ngFor="let group of warrantyData" class="spec-row-group">
+              <div *ngFor="let item of group.group" class="spec-row">
+                <div *ngIf="item.value" class="spec-cell-title">
+                  {{ item.title }}
+                </div>
+                <div *ngIf="item.value" class="spec-cell-value">
+                  <span [ngClass]="{'important-value': item.important}">{{ item.value }}</span>
+                  <span *ngIf="item.important" class="important-icon">!</span>
+                </div>
+                <div *ngIf="!item.value" class="spec-cell-description">
+                  {{ item.title }}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="spec-card">
+        <div class="img-card" style="background-image: url('/panel_480x590_R.png')"></div>
       </div>
     </div>
-  </div>
-  <div class="card-grid-single">
-    <div class="section">
-      <h1>ZOSTAW KONTAKT</h1>
-      <div class="section-content">
-        <h2>oddzwonimy w ciągu 24h</h2>
-        <div class="contact-fields-container">
+    <div class="card-grid-single">
+      test
+    </div>
+    <div class="card-grid-single">
+      <div class="card-header">
+        <span class="card-header-title">ZOSTAW KONTAKT</span>
+        <span class="card-header-subtitle">oddzwonimy w ciągu 24h</span>
+      </div>
+      <div class="card-content">
+        <div class="contact-fields">
           <mat-form-field appearance="outline">
             <mat-label>Imię i Nazwisko</mat-label>
             <input matInput style="text-align: left">
@@ -259,12 +379,16 @@
             <input matInput style="text-align: left;" [value]="'&plus;48'">
           </mat-form-field>
         </div>
-        <button class="select-button" matRipple>
+      </div>
+      <div class="contact-footer">
+        <button class="primary-button" matRipple>
           <mat-icon>mail</mat-icon>
           WYŚLIJ
         </button>
+      </div>
+      <div class="contact-footer">
         <mat-checkbox class="terms-checkbox" color="primary">
-          Wyrażam zgodę na przetwarzanie moich danych osobowych przez {{ companyName }} w celu kontaktu i&nbsp;przedstawienia
+          Wyrażam zgodę na przetwarzanie moich danych osobowych przez {{ companyName }}, w celu kontaktu i&nbsp;przedstawienia
           oferty fotowoltaiki zgodnie z
           <a href="/polityka-prywatnosci" target="_blank" rel="noopener noreferrer">
             polityką prywatności
@@ -272,6 +396,5 @@
         </mat-checkbox>
       </div>
     </div>
-  </div>
-
+  </section>
 </div>
