--- a/src/app/components/policy/policy.component.scss
+++ b/src/app/components/policy/policy.component.scss
@@ -15,12 +15,14 @@
 }
 .section h1{
   padding: 0.5rem;
+  font-size: 1.5rem;
 }
 
 .section-content {
   margin: 0;
   padding: 0;
   text-align: justify;
+  font-size: 0.9rem;
 }
 
 @media (max-width: 800px) {
